--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -126,7 +126,7 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-8 mrgn-bttm-lg">
                         <h1 property="name" id="wb-cont">United States-Canada: Federal supports</h1>
                         <p>Support and resources for businesses, workers, exporters and travellers affected by Canada-U.S. relations. Information on tariffs, CUSMA, and financial aid.</p>
                     </div>
@@ -148,7 +148,7 @@
                         </li>
                         <li><a href="https://international.canada.ca/en/global-affairs/campaigns/canada-us-engagement">Canada's engagement with the U.S.</a></li>
                         <li><a href="https://www.canada.ca/en/department-finance/programs/international-trade-finance-policy/canadas-response-us-tariffs.html">Canada’s response to U.S. tariffs</a></li>
-                        <li><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on U.S. steel, aluminum and  auto imports: How they apply at the border</a></li>
+                        <li><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/tariffs-tarifs/index-eng.html">Canadian tariffs on U.S. steel, aluminum and auto imports: How they apply at the border</a></li>
                     </ul>
                 </div>
             </section>
@@ -213,8 +213,7 @@
                             </div>
                             <div class="col-md-8">
                                 <h3><a href="https://cbsa-asfc.gc.ca/services/carm-gcra/menu-eng.html">Overview: CARM</a></h3>
-                                <p>Assess and pay duties and taxes on imported commercial goods
-                                </p>
+                                <p>Assess and pay duties and taxes on imported commercial goods</p>
                             </div>
                             <div class="col-md-8">
                                 <h3>
@@ -283,10 +282,10 @@
                         <summary><b>Returning</b> to Canada from the United States</summary>
                         <div class="row">
                             <div class="col-md-8">
-                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
+                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
                                 <p>
-                                    Advance Declaration, programs for trusted travellers, secondary inspections, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
-                                    protects your information, Indigenous border mobility measures
+                                    Advance Declaration, programs for trusted travellers, secondary inspections, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and protects your information,
+                                    Indigenous border mobility measures
                                 </p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
@@ -311,10 +310,10 @@
                                 <p>Entry requirements, dogs that do not meet the requirements</p>
                             </div>
                         </div>
-                                 <div class="row">
+                        <div class="row">
                             <div class="col-md-8">
-                               <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/prog-menu-eng.html">Programs for trusted travellers</a></h3>
-                                <p>Learn about programs to make border crossings faster and easier for travellers and private or commercial operators</p>  
+                                <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/prog-menu-eng.html">Programs for trusted travellers</a></h3>
+                                <p>Learn about programs to make border crossings faster and easier for travellers and private or commercial operators</p>
                             </div>
                         </div>
                     </details>
@@ -324,8 +323,8 @@
                             <div class="col-md-8">
                                 <h3><a href="https://www.cbsa-asfc.gc.ca/travel-voyage/menu-eng.html">Crossing the border into Canada</a></h3>
                                 <p>
-                                    Advance Declaration, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and
-                                    protects your information, Indigenous border mobility measures, restricted and prohibited goods
+                                    Advance Declaration, international event services, airport arrival kiosks and eGates, examining digital devices, how the CBSA collects, uses and protects your information, Indigenous border mobility
+                                    measures, restricted and prohibited goods
                                 </p>
                                 <h3><a href="https://travel.gc.ca/returning/customs">Customs</a></h3>
                                 <p>Information on what you can bring back to Canada, what you must declare, customs duties and taxes, and personal exemptions</p>
