--- a/jmtesting/can-us-tariffs/tariffs-travel-contacts.html
+++ b/jmtesting/can-us-tariffs/tariffs-travel-contacts.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
 
-        <title>TBD - Contacts for businesses </title>
+        <title>TBD - Contacts for businesses</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
         <meta name="description" content=" " />
         <meta name="author" content=" " />
@@ -126,12 +126,15 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
             <div class="container">
                 <div class="row">
-                        <h1 property="name" id="wb-cont">United States-Canada support: Contacts for travellers</h1>
-                    <div class="col-md-6">
+                    <div class="col-md-8">
+                        <hgroup id="wb-cont">
+                            <p>United States-Canada support</p>
+                            <h1 property="name">Contacts for travellers</h1>
+                        </hgroup>
                         <p>Contact information for people travelling between Canada and the United States.</p>
                     </div>
                 </div>
-                          <section class="gc-srvinfo">
+                <section>
                     <h2>Contacts</h2>
                     <div class="row">
                         <div class="col-md-8">
@@ -142,8 +145,6 @@
                         </div>
                     </div>
                 </section>
-            </div>
-    
             </div>
 
             <section class="pagedetails container">
