--- a/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
+++ b/jmtesting/can-us-tariffs/topic-page-alt-imp-exp.html
@@ -170,7 +170,7 @@
                         </div>
                         <div class="col-md-8">
                             <h3>
-                                <a href="https://agriculture.canada.ca/en/international-trade/services-agri-food-exporters/support-industries-impacted-trade-disruptions">Support for agriculture industries impacted by trade disruptions</a>
+                                <a href="https://agriculture.canada.ca/en/international-trade/services-agri-food-exporters/support-industries-impacted-trade-disruptions">Support for Canadian agriculture and agri-food industries impacted by trade disruptions</a>
                             </h3>
                             <p>
                                 AgriStability, AgriInvest, advance payments, price pooling, loans program, trade disruption support (Farm Credit Canada), Agricultural Trade Commissioner Service, contact agri-food trade services, Canada
@@ -260,11 +260,6 @@
                                 </h3>
                                 <p>Canada-United States agriculture and agri-food data, support for Canadian agriculture and agri-food industries impacted by trade disruptions, Trade Disruption Customer Support program</p>
                             </div>
-                            <div class="col-md-8">
-                                <h3><a href="https://agriculture.canada.ca/en/programs">Agricultural programs and services</a></h3>
-                                <p>Programs and services supporting innovation, sustainable farming, business development, risk management, trade and market development</p>
-                            </div>
-
                             <div class="col-md-8">
                                 <h3><a href="https://www.international.gc.ca/trade-commerce/trade-agreements-accords-commerciaux/agr-acc/cusma-aceum/index.aspx?lang=eng">The Canada-United States-Mexico Agreement (CUSMA)</a></h3>
                                 <p>Doing business in North America, about, latest news, investing in Canada, find events, contact information</p>
