--- a/jmtesting/ai-answers/ai-launch-in-page-bttm.html
+++ b/jmtesting/ai-answers/ai-launch-in-page-bttm.html
@@ -569,6 +569,7 @@
             background-color: #1a2838;
             padding: 14px 20px;
 			border-radius: 10px;
+			margin-bottom: 30px;
         }
         
         .footer-content {
@@ -615,7 +616,7 @@
         }
         
     </style>
-        <div class="mrgn-bttm-0 mrgn-tp-xl">
+        <div class="mrgn-tp-lg">
                 <section class="col-md-12">
                     <div class="container aa-section">
                         <div class="footer-content">
