--- a/chelsey/design/bilingual_404.html
+++ b/chelsey/design/bilingual_404.html
@@ -164,7 +164,7 @@
                 <div class="row">
                     <h2 id="en">Page not found</h2>
                     <p><span class="label label-danger">404 error</span></p>
-                    <p class="hidden-xl hidden-md hidden-lg"><a href="#fr">Go to the French version</a></p>
+                    <p class="hidden-xl hidden-md hidden-lg"><a href="#fr">Aller à la version française</a></p>
                     <p>The page you’re looking for may have been moved or deleted. Check that the web address (URL) is spelled correctly. Do not include special characters or spaces in the URL.</p>
                     <p>You may be looking for:</p>
                     <ul>
@@ -210,7 +210,7 @@
                 <div class="row">
                     <h2 id="fr">Page non trouvée</h2>
                     <p><span class="label label-danger">Erreur 404</span></p>
-                    <p class="hidden-xl hidden-md hidden-lg"><a href="#en">Aller à la version anglaise</a></p>
+                    <p class="hidden-xl hidden-md hidden-lg"><a href="#en">Go to the English version</a></p>
                     <p>La page que vous souhaitez consulter a peut-être été déplacée ou supprimée. Assurez-vous que l’adresse Web (URL) est exacte. N’incluez pas de caractères spéciaux ni d’espaces dans l’URL.</p>
                     <p>Vous cherchez peut-être l’une des pages suivantes :</p>
                     <ul>
