--- a/jmtesting/layered-theme-refinement/ly-features-3-outside.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3-outside.html
@@ -41,7 +41,7 @@
 </style>
 
 <link href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
-<link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/css/theme.css" />
+<link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
 <noscript><link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/wet-boew/css/noscript.css" /></noscript>
 </head>
 <body class="page-type-theme" vocab="http://schema.org/" typeof="WebPage"><nav>
