--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -63,7 +63,7 @@
 <link href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha256-mUZM63G8m73Mcidfrv5E+Y61y7a12O5mW4ezU3bxqW4=" crossorigin="anonymous"/>
 
-<link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/css/theme.css" />
+<link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
 <noscript><link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/wet-boew/css/noscript.css" /></noscript>
 </head>
 <body class="page-type-theme" vocab="http://schema.org/" typeof="WebPage"><nav>
