--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
@@ -170,7 +170,7 @@
 			</li>
 			<li>
 				<form action="#" method="get">
-				<button class="btn btn-default" type="button">Try AI answers</button>
+				<button class="btn btn-default" type="button">Try AI Answers</button>
 				</form>
 			</li>
 		</ul>
