--- a/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
@@ -266,6 +266,25 @@
             
             <div class="mwstitle section">
 
+<!-- AI Answers GCWeb modal -->
+ <section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
+	<div class="container">
+		<ul class="list-inline mrgn-bttm-sm">
+			<li>
+				<img src="../../img/AI-stars-30.png" alt="AI stars icon" />
+			</li>
+			<li>
+				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
+			</li>
+			<li>
+				<form action="#" method="get">
+				<button class="btn btn-default" type="button">Use AI Answers</button>
+				</form>
+			</li>
+		</ul>
+	</div>
+</section>
+
     <h1 property="name" class="wb-inv" id="wb-cont" dir="ltr">
 EI maternity and parental benefits: What these benefits offer</h1>
 	</div>
