--- a/jmtesting/ai-answers/pilot-launch/partner-demos/measles-modal.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/measles-modal.html
@@ -259,6 +259,24 @@
         <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement" class="container">
             
             <div class="mwstitle section">
+<!-- AI Answers GCWeb modal -->
+ <section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
+	<div class="container">
+		<ul class="list-inline mrgn-bttm-sm">
+			<li>
+				<img src="../../img/AI-stars-30.png" alt="AI stars icon" />
+			</li>
+			<li>
+				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
+			</li>
+			<li>
+				<form action="#" method="get">
+				<button class="btn btn-default" type="button">Use AI Answers</button>
+				</form>
+			</li>
+		</ul>
+	</div>
+</section>
 
     <h1 property="name" id="wb-cont" dir="ltr">
 Measles: Symptoms and treatment</h1>
