--- a/jmtesting/layered-theme-refinement/ly-features-3.html
+++ b/jmtesting/layered-theme-refinement/ly-features-3.html
@@ -41,7 +41,7 @@
 </style>
 
 <link href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/assets/favicon.ico" rel="icon" type="image/x-icon" />
-<link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/css/theme.css" />
+<link rel="stylesheet" href="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/css/theme.min.css" />
 <noscript><link rel="stylesheet" href="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/wet-boew/css/noscript.css" /></noscript>
 </head>
 <body class="page-type-theme" vocab="http://schema.org/" typeof="WebPage"><nav>
@@ -132,11 +132,11 @@
 
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 <div id="gridContainer">
-	<nav>
+	<nav id="theme-nav">
 		<div class="container">
 			<h2 class="wb-inv">Themes menu</h2>
 			<a class="wb-sl" href="#wb-cont">Skip to main content</a>
-			<button id="menuBtn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
+			<button id="menu-btn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
 			<ul class="list-unstyled">
 				<li class="active"><a href="theme-en.html">Jobs</a></li>
 				<li><a href="#">Immigration and citizenship</a></li>
