--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -154,11 +154,11 @@
 
 <main property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 <div id="gridContainer">
-	<nav>
+	<nav id="theme-nav">
 		<div class="container">
 			<h2 class="wb-inv">Themes menu</h2>
 			<a class="wb-sl" href="#wb-cont">Skip to main content</a>
-			<button id="menuBtn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
+			<button id="menu-btn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
 			<ul class="list-unstyled">
 				<li><a href="#">Jobs</a></li>
 				<li class="active"><a href="#">Immigration and citizenship</a></li>
