--- a/jmtesting/layered-theme-refinement/ly-ircc.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc.html
@@ -91,7 +91,7 @@
 			
 			<div class="brand col-xs-9 col-sm-5 col-md-4" property="publisher" typeof="GovernmentOrganization">
 	<a href="https://wet-boew.github.io/GCWeb/" property="url">
-		<img src="https://servicecanada.github.io/wet-boew-demos/gcweb-pr2390/dist/GCWeb/assets/sig-blk-en.svg" alt="Government of Canada" property="logo" /><span class="wb-inv"> / <span lang="fr">Gouvernement du Canada</span></span>
+		<img src="https://www.canada.ca/etc/designs/canada/wet-boew/assets/sig-blk-en.svg" alt="Government of Canada" property="logo" /><span class="wb-inv"> / <span lang="fr">Gouvernement du Canada</span></span>
 	</a>
 	<meta property="name" content="Government of Canada">
 	<meta property="areaServed" typeof="Country" content="Canada" />
@@ -161,7 +161,7 @@
 			<button id="menu-btn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
 			<ul class="list-unstyled">
 				<li><a href="#">Jobs</a></li>
-				<li class="active"><a href="#">Immigration and citizenship</a></li>
+				<li class="wb-navcurr"><a href="#">Immigration and citizenship</a></li>
 				<li><a href="#">Travel and tourism</a></li>
 				<li><a href="#">Business</a></li>
 				<li><a href="#">Benefits</a></li>
