--- a/jmtesting/layered-theme-refinement/ly-features-2.html
+++ b/jmtesting/layered-theme-refinement/ly-features-2.html
@@ -138,7 +138,7 @@
 			<a class="wb-sl" href="#wb-cont">Skip to main content</a>
 			<button id="menu-btn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
 			<ul class="list-unstyled">
-				<li class="wb-navcurr"><a href="theme-en.html">Jobs</a></li>
+				<li><a href="theme-en.html" class="wb-navcurr">Jobs</a></li>
 				<li><a href="#">Immigration and citizenship</a></li>
 				<li><a href="#">Travel and tourism</a></li>
 				<li><a href="#">Business</a></li>
