--- a/jmtesting/layered-theme-refinement/ly-ircc-v3.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v3.html
@@ -161,7 +161,7 @@
 			<button id="menu-btn" class="btn btn-primary"><span class="wb-inv">Toggle </span>Menu<span class="glyphicon glyphicon-chevron-down"></span></button>
 			<ul class="list-unstyled">
 				<li><a href="#">Jobs</a></li>
-				<li class="wb-navcurr"><a href="#">Immigration and citizenship</a></li>
+				<li><a href="#" class="wb-navcurr">Immigration and citizenship</a></li>
 				<li><a href="#">Travel and tourism</a></li>
 				<li><a href="#">Business</a></li>
 				<li><a href="#">Benefits</a></li>
