--- a/jmtesting/layered-theme-refinement/ly-ircc-v3.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v3.html
@@ -198,7 +198,7 @@
 		</section>
 		
 		<!-- added custom CSS to make 2 items work -->
-		<style>
+		<!-- <style>
 			.fix ul[class*=list-col] {
 					list-style-type: disc;
 					margin-block-start: 1em;
@@ -206,7 +206,7 @@
 					padding-inline-start: 40px;
 					unicode-bidi: isolate;
 			}
-		</style>
+		</style> -->
 		<section class="gc-most-requested">
 			<div class="container fix">
 				<h2>Most requested</h2>
