--- a/jmtesting/ai-answers/local-copy/ai-answers-chat-2.html
+++ b/jmtesting/ai-answers/local-copy/ai-answers-chat-2.html
@@ -365,69 +365,6 @@ textarea:focus {
 </header>
 
   
-<style>
-/* .citation-container {
-	text-align: left !important;
-	padding: 1em !important;
-}
-.citation-head {
-	font-size: 26px;
-}
-.citation-link {
-	margin-bottom: 0 !important;
-}
-.chat-id {
-	padding: .5em !important;
-	margin-top: -26px !important;
-	text-align: left !important;
-}  */
-hr {
-    border-top: 1px solid #d9d9d9;
-}
-
-.feedback-buttons {
-    white-space: nowrap;
-}
-
-.feedback-text, .feedback-link {
-	font-size: 18px;
-}
-.feedback-container {
-	background-color: #fff;
-	border: solid 1px #d9d9d9;
-	padding: 1rem;
-	border-radius: 0.5rem;
-	margin-top: 10px;
-}
-
-.button-as-link {
-	text-decoration: underline;
-}
-.button-as-link:first-of-type {
-	padding-right: 6px !important;
-}
-
-
-.feedback-link.button-as-link:first-of-type::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
-    content: "\f164"; /* thumbs-up */
-    margin-right: 6px;
-	text-decoration: none !important;
-	display: inline-block;
-}
-
-.feedback-link.button-as-link:nth-of-type(2)::before {
-    font-family: "Font Awesome 6 Free";
-    font-weight: 900;
-    content: "\f165"; /* thumbs-down */
-    margin-right: 6px;
-	text-decoration: none !important;
-    display: inline-block;
-
-}
-
-</style>
 
 		<main class="" property="mainContentOfPage" resource="#wb-main" typeof="WebPageElement">
 			<div class="container">
@@ -477,10 +414,9 @@ hr {
                         </svg>
                         &nbsp;AI can make mistakes, always check your answer.
                     </p>
-				</div>
+                </div>
                 <div class="citation-container">
-                    <p class="citation-head">Check your answer - next step:</p>
-
+                    <p class="citation-head">Check your answer and take the next step:</p>
                     <p class="citation-link">
                         <a href="https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport/online-account.html" target="_blank" rel="noopener noreferrer" tabindex="0">
                             https://www.canada.ca/en/immigration-refugees-citizenship/services/canadian-passports/renew-adult-passport/online-account.html
@@ -490,13 +426,10 @@ hr {
             </div>
             <div class="chat-id"><p>Chat ID: 31e0fd81-2f48-4bbb-a290-57f8d3deba6f</p></div>
             <div class="feedback-container">
-                <span class="feedback-text">How was this answer? </span>
-				    <span class="feedback-buttons"><button class="feedback-link button-as-link" tabindex="0">Good</button><span class="feedback-text">or</span>
-                <button class="feedback-link button-as-link" tabindex="0">Needs improvement</button><span class="feedback-separator"></span>
-				</span>
+                <span class="feedback-text">How was this answer? </span><button class="feedback-link button-as-link" tabindex="0">Good</button><span class="feedback-separator">·</span><span class="feedback-text">or</span>
+                <span class="feedback-separator">·</span><button class="feedback-link button-as-link" tabindex="0">Needs improvement</button><span class="feedback-separator"></span>
                 <button class="wb-inv" aria-label="Skip follow-on question" tabindex="0">Skip follow-on question</button>
             </div>
-			<hr>
         </div>
     </div>
     
