--- a/jmtesting/layered-theme-refinement/ly-ircc-v4.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v4.html
@@ -189,6 +189,8 @@
 			<div class="container">
 				<h2>Special measures</h2>
 				<ul>
+                  <li><a href="/en/immigration-refugees-citizenship/services/israel-west-bank-gaza-2023.html">Gaza and the West Bank</a></li>
+                  <li><a href="/en/immigration-refugees-citizenship/services/haiti-2024.html">Haiti</a></li>
                   <li><a href="/en/immigration-refugees-citizenship/services/iran.html">Iran</a></li>
                   <li><a href="/en/immigration-refugees-citizenship/services/sudan2023.html">Sudan</a></li>
                   <li><a href="/en/immigration-refugees-citizenship/services/immigrate-canada/ukraine-measures.html">Ukraine</a></li>
@@ -222,8 +224,8 @@
 	<div class="col-md-12">
 		<h2 class="mrgn-tp-0 h4">Your IRCC application</h2>
 		<section class="gc-srvinfo">
-		<p>Accounts (GCKey, representatives, employers and more), biometrics, forms, change address</p>
-		<p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Your IRCC application</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
+        <p>Accounts (GCKey, representatives, employers and more), biometrics, forms, change address</p>
+        <p><a href="/en/immigration-refugees-citizenship/services/application.html"><strong>Your IRCC application</strong></a>&nbsp;<i class="fas fa-arrow-right" aria-hidden="true"></i></p>
 		</section>
 	</div>
 	</div>
@@ -240,27 +242,23 @@
 		<div class="row wb-eqht-grd">
 			<div class="col-md-6">
 			<h3><a href="/en/immigration-refugees-citizenship/services/visit-canada.html">Visit Canada</a></h3>
-			<p>Visitor visa, electronic travel authorization (eTA), super visa, transit visa, visit on business, extend your visit</p>
+			<p>Electronic travel authorization (eTA), visitor visa, extend your visit</p>
 			</div>
 			<div class="col-md-6">
 			<h3><a href="/en/immigration-refugees-citizenship/services/immigrate-canada.html">Live in Canada permanently</a></h3>
-			<p>Permanent residence (PR) programs such as Express Entry, family sponsorship and the Provincial Nominee Program (PNP)</p>
+			<p>Express Entry, sponsorship, permanent residence (PR)</p>
 			</div>
 			<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/work-canada.html">Work in Canada temporarily</a></h3>
-			<p>Work permits for up to 3 years, post-graduation work permit (PGWP), hire foreign workers</p>
+			<h3><a href="/en/immigration-refugees-citizenship/services/work-canada.html">Temporary work permits</a></h3>
+         	<p>Post-graduation work permit (PGWP), International Experience Canada (IEC)</p>
 			</div>
 			<div class="col-md-6">
 			<h3><a href="/en/immigration-refugees-citizenship/services/study-canada.html">Study in Canada</a></h3>
-			<p>Study permits, designated learning institutions (DLIs), work while you study, change schools</p>
+         	 <p>Designated learning institutions (DLI), work while you study, extensions</p>
 			</div>
 			<div class="col-md-6">
 			<h3><a href="/en/immigration-refugees-citizenship/services/refugees.html">Refugees and asylum</a></h3>
-			<p>Claim asylum, resettle as a refugee, sponsor a refugee, Economic Mobility Pathways Pilot (EMPP)</p>
-			</div>
-			<div class="col-md-6">
-			<h3><a href="https://ircc.canada.ca/iec/index.asp">International Experience Canada (IEC)</a></h3>
-			<p>Special program for youth aged 18 to 35 to work and travel abroad, including working holiday visas</p>
+          	<p>Claim asylum, resettle as a refugee</p>
 			</div>
 		</div>
 		</section>
@@ -279,7 +277,7 @@
 				<div class="col-xs-12 col-sm-11">
 					<h3 class="mrgn-tp-0 h5">Not sure where to start?</h3>
 					<section class="gc-srvinfo">
-						<p><a href="">Answer a few questions and explore all immigration programs</a></p>
+						<p><a href="https://ircc.canada.ca/explore-programs/index.asp">Answer a few questions and explore all immigration programs</a></p>
 					</section>
 				</div>
 			</div>
@@ -290,26 +288,28 @@
 	<h2 class="mrgn-tp-0 h4">Citizenship and settling in Canada</h2>
 	<section class="gc-srvinfo">
 		<div class="row wb-eqht-grd">
-		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports and other travel documents</a></h3>
-			<p>Renew or apply for an adult passport, apply for a passport for your child, passport photos</p>
-		</div>
-		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Citizenship</a></h3>
-			<p>Apply for citizenship, citizenship test and ceremony, study guide, citizenship certificate</p>
-		</div>
-		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/permanent-residents.html">Permanent resident (PR) cards and status</a></h3>
-			<p>Renew or replace a PR card, apply for a permanent resident travel document (PRTD)</p>
-		</div>
-		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/settle-canada.html">Settling in Canada as a newcomer</a></h3>
-			<p>Free immigrant services, benefits and taxes for newcomers, find a job, learn English or French</p>
-		</div>
-		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/canadians/adopt-child-abroad.html">International adoption</a></h3>
-			<p>Apply for the citizenship or permanent residence of your adopted child from another country</p>
-		</div>
+			<div class="col-md-6">
+				<h3><a href="/en/immigration-refugees-citizenship/services/canadian-citizenship.html">Canadian citizenship</a></h3>
+				<p>Citizenship test, ceremony, proof of citizenship</p>
+			</div>  
+			<div class="col-md-6">
+				<h3><a href="/en/immigration-refugees-citizenship/services/permanent-residents.html">Permanent resident (PR) card</a></h3>
+				<p>Renew or replace a lost or expired card, get your first card</p>
+			</div>
+			<div class="col-md-6">
+				<h3><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports</a></h3>
+				<p>Adult and child passports, photos, other travel documents</p>
+			</div>
+			</div>
+			<div class="row wb-eqht-grd">
+			<div class="col-md-6">
+				<h3><a href="/en/immigration-refugees-citizenship/services/settle-canada.html">Settling in Canada</a></h3>
+				<p>Free services, find a job, benefits and taxes for newcomers</p>
+			</div>
+			<div class="col-md-6">
+				<h3><a href="/en/immigration-refugees-citizenship/services/canadians/adopt-child-abroad.html">International adoption</a></h3>
+				<p>Citizenship or permanent residence for your adopted child</p>
+			</div>
 		</div>
 	</section>
 	</div>
@@ -319,12 +319,12 @@
 	<section class="gc-srvinfo">
 		<div class="row wb-eqht-grd">
 		<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/protect-fraud.html">Immigration fraud and scams</a></h3>
-			<p>Check if your representative is authorized, report fraud or abuse, avoid marriage fraud</p>
+			<h3><a href="/en/immigration-refugees-citizenship/services/protect-fraud.html">Fraud and scams</a></h3>
+                    <p>Check if your representative is authorized, report fraud or abuse</p>
 		</div>
 		<div class="col-md-6">
 			<h3><a href="/en/services/immigration-citizenship/enforcement-violations.html">Inadmissibility, enforcement and appeals</a></h3>
-			<p>Check if you’re inadmissible, arrests, detentions, removals, overcoming criminal convictions</p>
+                    <p>Check if you’re inadmissible, overcoming criminal convictions</p>
 		</div>
 		</div>
 	</section>
