--- a/jmtesting/layered-theme-refinement/ly-ircc-v4.html
+++ b/jmtesting/layered-theme-refinement/ly-ircc-v4.html
@@ -253,7 +253,7 @@
          	<p>Post-graduation work permit (PGWP), International Experience Canada (IEC)</p>
 			</div>
 			<div class="col-md-6">
-			<h3><a href="/en/immigration-refugees-citizenship/services/study-canada.html">Study in Canada</a></h3>
+			<h3><a href="/en/immigration-refugees-citizenship/services/study-canada.html">Study permits</a></h3>
          	 <p>Designated learning institutions (DLI), work while you study, extensions</p>
 			</div>
 			<div class="col-md-6">
@@ -300,8 +300,6 @@
 				<h3><a href="/en/immigration-refugees-citizenship/services/canadian-passports.html">Passports</a></h3>
 				<p>Adult and child passports, photos, other travel documents</p>
 			</div>
-			</div>
-			<div class="row wb-eqht-grd">
 			<div class="col-md-6">
 				<h3><a href="/en/immigration-refugees-citizenship/services/settle-canada.html">Settling in Canada</a></h3>
 				<p>Free services, find a job, benefits and taxes for newcomers</p>
@@ -314,7 +312,7 @@
 	</section>
 	</div>
 	<div class="banded gc-most-requested">
-	<div class="container mrgn-bttm-md mrgn-tp-sm">
+	<div class="container mrgn-bttm-0 mrgn-tp-sm">
 	<h2 class="mrgn-tp-0 h4">Fraud and inadmissibility</h2>
 	<section class="gc-srvinfo">
 		<div class="row wb-eqht-grd">
