--- a/jmtesting/ai-answers/local-copy/ai-answers-chat.html
+++ b/jmtesting/ai-answers/local-copy/ai-answers-chat.html
@@ -29,6 +29,11 @@
 <link rel="stylesheet" href="https://design.canada.ca/css/custom.css" />
 <link rel="stylesheet" href="./css/App.css" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+<!-- GC Design System CSS Shortcuts -->
+<link
+  rel="stylesheet"
+  href="https://cdn.design-system.alpha.canada.ca/@gcds-core/css-shortcuts@latest/dist/gcds-css-shortcuts.min.css"
+/>
 		<!-- Custom code starts here (Analytics) / Code personalisé commence ici (Analytiques) -->
 		<script>
 			var _gaq = _gaq || [];
