--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -524,8 +524,8 @@
                         <img src="../img/AI-stars.png" alt="AI stars icon" />
                     </div>
                     <div class="aa-text">
-                        <h2 class="wb-inv">You're invited to try AI Answers</h2>
-                        <a href="https://ai-answers.alpha.canada.ca/"><p><strong>Need help?</strong> You're invited to try AI Answers</p></a>
+                        <h2 class="wb-inv">Try a beta test of AI Answers</h2>
+                        <a href="https://ai-answers.alpha.canada.ca/"><p><strong>Need help?</strong>  Try a beta test of  AI Answers</p></a>
                     </div>
                 </div>
                 <button class="aa-close" type="button" aria-label="Close AI answers banner">
