--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -141,7 +141,7 @@
 						</ul>
 					</div>
 					<p>Need help? <a href="https://ai-answers.alpha.canada.ca/en?ref=https%3A%2F%2Fwww.canada.ca%2Fen%2Fimmigration-refugees-citizenship%2Fservices%2Fcanadian-passports%2Frenew-adult-passport.html">
-							You're invited to try AI Answers</a></p>
+							Try a beta test of AI Answers</a></p>
 				</div>
 			</div>
 
@@ -157,7 +157,7 @@
 			</li>
 			<li>
 				<form action="#" method="get">
-				<button class="btn btn-default" type="button">You're invited to try AI Answers</button>
+				<button class="btn btn-default" type="button">Try a beta test of AI Answers</button>
 				</form>
 			</li>
 		</ul>
