--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -427,7 +427,6 @@
             box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1);
         }
         
-        
         .aa-content {
             display: flex;
             align-items: center;
@@ -515,6 +514,10 @@
             margin-top: 60px;
         }
 
+        .underline {
+            text-decoration: underline;
+        }
+
     </style>
    <div class="aa-section mrgn-tp-md">
         <section>
@@ -525,7 +528,7 @@
                     </div>
                     <div class="aa-text">
                         <h2 class="wb-inv">Try a beta test of AI Answers</h2>
-                        <a href="https://ai-answers.alpha.canada.ca/"><p><strong>Need help?</strong>  Try a beta test of  AI Answers</p></a>
+                        <a href="https://ai-answers.alpha.canada.ca/"><p><strong>Need help?</strong>  <span class="underline">Try a beta test of  AI Answers</span></p></a>
                     </div>
                 </div>
                 <button class="aa-close" type="button" aria-label="Close AI answers banner">
