--- a/jmtesting/multilingual/demo-6-dropdown.html
+++ b/jmtesting/multilingual/demo-6-dropdown.html
@@ -173,19 +173,37 @@
 
 </style>
 
-<ul id="multilingual-list">
-<li><span class="currentpage" lang="en">English</span></li>
-<li><a href="https://test.canada.ca/sandbox/manylanguages/francais.html" target="_self" lang="fr">Français</a></li>
-<li><a href="https://test.canada.ca/sandbox/manylanguages/inuktitut.html" target="_self" lang="iu">ᐃᓄᒃᑎᑐᑦ</a></li>
-<li><a href="https://test.canada.ca/sandbox/manylanguages/farsi.html" target="_self" lang="fa" dir="rtl">فارسی</a></li>
-<li><a href="#" target="_self">繁體中文</a></li>
-<li><a href="#" target="_self">ਪੰਜਾਬੀ</a></li>
-<li><a href="#" target="_self">Tagalog</a></li>
-<li><a href="#" target="_self">عربى</a></li>
 </ul>
+<div class="col-md-12 mrgn-bttm-lg">
+	<div class="row">
+			<h2 class="h5">Select a language</h2>
 
-
-
+	<div class="col-md-8">
+		<div class="row">
+<div class="wb-fieldflow" data-wb-fieldflow='{"inline": true}'>
+	<ul>
+		        <li><a href="#" lang="fil">English</a></li>
+                <li><a href="#" lang="it">Français</a></li>
+                <li><a href="#" lang="fil">Filipino</a></li>
+                <li><a href="#" lang="it">Italiano</a></li>
+                <li><a href="#" lang="ja">日本語</a></li>
+                <li><a href="#" lang="ko">한국어</a></li>
+                <li><a href="#" lang="hu">Magyarul</a></li>
+                <li><a href="#" lang="nl">Nederlands</a></li>
+                <li><a href="#" lang="pl">Polski</a></li>
+                <li><a href="#" lang="pt">Português</a></li>
+                <li><a href="#" lang="pt-BR">Português (Brasil)</a></li>
+                <li><a href="#" lang="ro">Română</a></li>
+                <li><a href="#" lang="ar">العربية</a></li>
+                <li><a href="#" lang="bg">Български</a></li>
+                <li><a href="#" lang="zh-Hans">繁體中文 (廣東話)</a></li>
+                <li><a href="#" lang="zh-Hans">简体中文 (普通话)</a></li>
+	</ul>
+	</div>
+</div>
+</div>
+</div>
+</div>
 
 <p><span class="label label-default"><a href="un_declaration_EN1.pdf">PDF Version</a></span></p>
 
