--- a/jmtesting/multilingual/demo-7-dropdown-3-common.html
+++ b/jmtesting/multilingual/demo-7-dropdown-3-common.html
@@ -175,8 +175,13 @@
 
 </style>
 
+<ul id="multilingual-list">
+<li><a href="https://test.canada.ca/sandbox/manylanguages/francais.html" target="_self" lang="fr">Français</a></li>
+<li><a href="https://test.canada.ca/sandbox/manylanguages/inuktitut.html" target="_self" lang="iu">ᐃᓄᒃᑎᑐᑦ</a></li>
+<li><a href="https://test.canada.ca/sandbox/manylanguages/farsi.html" target="_self" lang="fa" dir="rtl">فارسی</a></li>
 
-<div class="col-md-12 mrgn-bttm-lg multilingual-dropdown mrgn-tp-lg">
+</ul>
+<div class="col-md-12 mrgn-bttm-lg multilingual-dropdown">
 	<div class="row">
 			<h2 class="h6 mrgn-tp-sm">Select another language</h2>
 
