--- a/jmtesting/multilingual/demo-6-dropdown.html
+++ b/jmtesting/multilingual/demo-6-dropdown.html
@@ -176,7 +176,7 @@
 </style>
 
 
-<div class="col-md-12 mrgn-bttm-lg multilingual-dropdown mrgn-tp-lg">
+<div class="col-md-12 mrgn-bttm-lg multilingual-dropdown mrgn-tp-md">
 	<div class="row">
 			<h2 class="h6 mrgn-tp-sm">Select another language</h2>
 
