--- a/jmtesting/multilingual/demo-7-dropdown-3-common.html
+++ b/jmtesting/multilingual/demo-7-dropdown-3-common.html
@@ -148,6 +148,7 @@
         margin-top: 15px;
 		display: inline-block;
 		padding: 0px 20px;
+		padding-inline-start: 0 !important;
 	}
 
     ul#multilingual-list li {
