--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
@@ -141,22 +141,9 @@
 						</ul>
 					</div>
 					<p>Need help? <a href="https://ai-answers.alpha.canada.ca/en?ref=https%3A%2F%2Fwww.canada.ca%2Fen%2Fimmigration-refugees-citizenship%2Fservices%2Fcanadian-passports%2Frenew-adult-passport.html">
-							Use AI Answers</a></p>
+							Try a beta test of AI Answers</a></p>
 				</div>
 			</div>
-
-
-<!-- <section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
-	<div class="container">
-		<div class="col-md-1">
-             <img src="../img/AI-stars-30.png" alt="AI stars icon" />
-        </div>
-		<div class="col-md-11">
-			<h2 class="wb-inv">Use AI answers</h2>
-			<a href="https://ai-answers.alpha.canada.ca/"><p><strong>Need help?</strong> Use AI Answers</p></a>
-		</div>
-	</div>
-</section> -->
 
 
 <section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
@@ -169,8 +156,8 @@
 				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
 			</li>
 			<li>
-				<form action="#" method="get">
-				<button class="btn btn-default" type="button">Use AI Answers</button>
+				<form action="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url" method="get">
+				<button class="btn btn-default" type="button">Try a beta test of AI Answers</button>
 				</form>
 			</li>
 		</ul>
