--- a/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
@@ -267,7 +267,7 @@
             <div class="mwstitle section">
 
 <!-- AI Answers GCWeb modal -->
- <section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
+<section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
 	<div class="container">
 		<ul class="list-inline mrgn-bttm-sm">
 			<li>
@@ -277,8 +277,8 @@
 				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
 			</li>
 			<li>
-				<form action="#" method="get">
-				<button class="btn btn-default" type="button">Use AI Answers</button>
+				<form action="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url" method="get">
+				<button class="btn btn-default" type="button">Try a beta test of AI Answers</button>
 				</form>
 			</li>
 		</ul>
