--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -153,11 +153,11 @@
 				<img src="../img/AI-stars-30.png" />
 			</li>
 			<li>
-				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
+				<header class="p-0"><h2 class="modal-title">Besoin d'aide&nbsp;?</h2></header>
 			</li>
 			<li>
-				<form action="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url" method="get">
-				<button class="btn btn-default" type="button">Try a beta test of AI Answers</button>
+				<form action="https://reponses-ia.alpha.canada.ca/" referrerpolicy="unsafe-url" method="get">
+				<button class="btn btn-default" type="button"> Essayez la version bêta de Réponses IA</button>
 				</form>
 			</li>
 		</ul>
