--- a/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/ei-maternity-parental-modal.html
@@ -271,7 +271,7 @@
 	<div class="container">
 		<ul class="list-inline mrgn-bttm-sm">
 			<li>
-				<img src="../../img/AI-stars-30.png" alt="AI stars icon" />
+				<img src="../../img/AI-stars-30.png" />
 			</li>
 			<li>
 				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
