--- a/jmtesting/ai-answers/pilot-launch/partner-demos/measles-custom.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/measles-custom.html
@@ -368,7 +368,7 @@
                 <div class="container">
                     <div class="aa-content">
                         <div class="aa-icon">
-                            <img src="../../img/AI-stars.png" alt="AI stars icon" />
+                            <img src="../../img/AI-stars.png" />
                         </div>
                         <div class="aa-text">
                             <h2 class="wb-inv">Try a beta test of AI Answers</h2>
