--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -543,8 +543,8 @@
                         <img src="../img/AI-stars.png" />
                     </div>
                     <div class="aa-text">
-                        <h2 class="wb-inv">Essayez la version bêta de Réponses IA</h2>
-                        <a href="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url"><p><strong>Besoin d'aide&nbsp;?</strong>  <span class="aa-link">Essayez la version bêta de Réponses IA</span></p></a>
+                        <h2 class="wb-inv">Essayez Réponses IA</h2>
+                        <a href="https://reponses-ia.alpha.canada.ca/" referrerpolicy="unsafe-url"><p><strong>Besoin d'aide&nbsp;?</strong>  <span class="aa-link">Essayez la version bêta de Réponses IA</span></p></a>
                     </div>
                 </div>
                 <button class="aa-close" type="button" aria-label="Fermer la bannière Réponses IA">
