--- a/jmtesting/ai-answers/pilot-launch/partner-demos/measles-custom.html
+++ b/jmtesting/ai-answers/pilot-launch/partner-demos/measles-custom.html
@@ -371,8 +371,8 @@
                             <img src="../../img/AI-stars.png" />
                         </div>
                         <div class="aa-text">
-                            <h2 class="wb-inv">Try a beta test of AI Answers</h2>
-                            <a href="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url"><p><strong>Need help?</strong>  <span class="aa-link">Try a beta test of  AI Answers</span></p></a>
+                            <h2 class="wb-inv">Try AI Answers</h2>
+                            <a href="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url"><p><strong>Need help?</strong>  <span class="aa-link">Try a beta test of AI Answers</span></p></a>
                         </div>
                     </div>
                     <button class="aa-close" type="button" aria-label="Close AI answers banner">
