--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -37,7 +37,7 @@
 		defTop.outerHTML = wet.builder.top({
 			lngLinks: [{
 				lang: "en",
-				href: "./overlay-demo-en.html",
+				href: "./ai-launch-sticky-tp-band-AEM-overlay.html",
 				text: "English"
 			}],
 			breadcrumbs: [{
