--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
@@ -38,7 +38,7 @@
 		defTop.outerHTML = wet.builder.top({
 			lngLinks: [{
 				lang: "fr",
-				href: "./overlay-demo-fr.html",
+				href: "./ai-launch-sticky-tp-band-AEM-overlay-v2.html",
 				text: "Français"
 			}],
 			breadcrumbs: [{
