--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-v2.html
@@ -35,7 +35,7 @@
                         <h2 class="wb-inv">Sélection de la langue</h2>
                         <ul class="list-inline mrgn-bttm-0">
                             <li>
-                                <a lang="en" hreflang="en" href="topic-en.html">
+                                <a lang="en" hreflang="en" href="ai-launch-sticky-tp-band.html">
                                     <span class="hidden-xs" translate="no">English</span>
                                     <abbr title="English" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">en</abbr>
                                 </a>
