--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band.html
@@ -35,7 +35,7 @@
                         <h2 class="wb-inv">Language selection</h2>
                         <ul class="list-inline mrgn-bttm-0">
                             <li>
-                                <a lang="fr" hreflang="fr" href="topic-fr.html">
+                                <a lang="fr" hreflang="fr" href="ai-launch-sticky-tp-band-v2.html">
                                     <span class="hidden-xs" translate="no">Français</span>
                                     <abbr title="Français" translate="no" class="visible-xs h3 mrgn-tp-sm mrgn-bttm-0 text-uppercase">fr</abbr>
                                 </a>
