--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -151,11 +151,13 @@
             </li>
             <li>
                 <header class="p-0"><h2 class="modal-title">Besoin d'aide&nbsp;?</h2></header>
-            </li>
-            <li>
-                <form action="https://reponses-ia.alpha.canada.ca/" referrerpolicy="unsafe-url" method="get">
-                <button class="btn btn-default" type="button"> Essayez la version bêta de Réponses IA</button>
-                </form>
+            </li>	
+			<li>
+				<a href="https://reponses-ia.alpha.canada.ca/" 
+				referrerpolicy="unsafe-url" 
+				class="btn btn-default">
+				Essayez la version bêta de Réponses IA
+				</a>
             </li>
         </ul>
     </div>
