--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay.html
@@ -155,10 +155,12 @@
 			<li>
 				<header class="p-0"><h2 class="modal-title">Need help?</h2></header>
 			</li>
-			<li>
-				<form action="https://ai-answers.alpha.canada.ca" referrerpolicy="unsafe-url" method="get">
-				<button class="btn btn-default" type="button">Try a beta test of AI Answers</button>
-				</form>
+			<li>		
+				<a href="https://ai-answers.alpha.canada.ca" 
+				referrerpolicy="unsafe-url" 
+				class="btn btn-default">
+				Try a beta test of AI Answers
+				</a>
 			</li>
 		</ul>
 	</div>
