--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -138,7 +138,7 @@
 						</ul>
 					</div>
 					<p>Besoin d'aide&nbsp;? <a href="https://reponses-ia.alpha.canada.ca/fr?ref=https%3A%2F%2Fwww.canada.ca%2Ffr%2Fimmigration-refugies-citoyennete%2Fservices%2Fpasseports-canadiens%2Frenouveler-passeport-adulte.html">
-							Essayez la version bêta de Réponses IA</a></p>
+							Essayez une version bêta de Réponses IA</a></p>
 				</div>
 			</div>
 
@@ -156,7 +156,7 @@
 				<a href="https://reponses-ia.alpha.canada.ca/" 
 				referrerpolicy="unsafe-url" 
 				class="btn btn-default">
-				Essayez la version bêta de Réponses IA
+				Essayez une version bêta de Réponses IA
 				</a>
             </li>
         </ul>
