Mark page as archived with warning message
Updated title to indicate the page is archived and added a warning section about the archived content.

--- a/chelsey/design/can-us.html
+++ b/chelsey/design/can-us.html
@@ -10,8 +10,12 @@ description: "Standard page with breadcrumbs"
 lang: en
 layout: default
 pageclass: cnt-wdth-lmtd
-title: "Title: TBD"
+title: "Archived: [Page title]"
 ---
+<section class="alert alert-warning">
+ <h3>Archived: This page is provided for historical purposes</h3>
+ <p>This information has been archived and is provided for reference only. <strong>It may no longer be correct.</strong> The content has not been altered or updated since it was archived. </p>
+</section>
 <section class="gc-most-requested">
 	<div class="container">
 		<h2>Most requested</h2>
