--- a/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
+++ b/jmtesting/ai-answers/pilot-launch/ai-launch-sticky-tp-band-AEM-overlay-v2.html
@@ -143,7 +143,7 @@
 			</div>
 
 
-<section id="top-bar" class="wb-overlay modal-content overlay-def wb-bar-t open">
+<section id="top-bar" class="aa-answers wb-overlay modal-content overlay-def wb-bar-t open">
     <div class="container">
         <ul class="list-inline mrgn-bttm-sm">
             <li>
